# templated-dashboards

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
cli/: dashboard.py
docs/: BUILDER_API.md  CONSUMERS.md
examples/: agentbridge_conformance.py  pl_audit.py  portfolio_overview.py  war_room.py
scripts/: emit-status.py  run-tests.py
spec/: DASHBOARD_SPEC.md
spec/schema/v1/: dashboard.json
src/dashboards/: __init__.py  builder.py  cli.py  ir.py  render.py
src/dashboards/_status_stub/: __init__.py
src/dashboards/components/: __init__.py  callout.py  chart.py  kpi_tile.py  status_card.py  table.py  timeline.py
src/dashboards/renderers/: __init__.py  excel.py  html.py  markdown.py  pdf.py
src/dashboards/themes/: __init__.py  light.py  palantir.py
tests/: _run_direct.py  conftest.py  test_builder.py  test_cli.py  test_ir.py  test_renderers.py  test_status_stub.py  test_v030_features.py
