[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "templated-dashboards"
version = "0.1.0"
description = "Data-driven multi-format dashboard rendering (HTML / Markdown / Excel / PDF)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "kjhholt-alt" }]
dependencies = [
    "pydantic>=2.5",
    "jsonschema>=4.20",
]

[project.optional-dependencies]
excel = ["openpyxl>=3.1"]
pdf   = ["weasyprint>=60"]
all   = ["openpyxl>=3.1", "weasyprint>=60"]
dev   = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "openpyxl>=3.1",
]

[project.scripts]
dashboard = "dashboards.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dashboards = ["templates/*.html", "templates/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.coverage.run]
source = ["src/dashboards"]
omit = ["src/dashboards/_status_stub/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
